--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ padding: 0;
 
 html, body {
   font-size: 18px;
-  background-color: #0b2518;
+  background-color: rgb(240, 230, 230);
 }
 
 h1{
@@ -16,7 +16,7 @@ h1{
   font-weight: 800;
   line-height: 1.5;
   margin: 45px 0;
-  color: greenyellow
+  color:black;
 
   
   
